# curly-octo-bassoon

./: Cargo.toml  LICENSE  README.md
labelled-enum/: Cargo.toml
labelled-enum-derive/: Cargo.toml
labelled-enum-derive/src/: attr.rs  from_str.rs  lib.rs  rename.rs  to_string.rs  util.rs
labelled-enum/src/: lib.rs
labelled-enum/tests/: derive.rs  serde.rs
