[package]
name = "labelled-enum-derive"
version = "0.1.0"
edition = "2021"
description = "Converting an enum to/from String"
license = "MIT"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.2.0"
