[package]
name = "labelled-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
labelled-enum-derive = { path = "../labelled-enum-derive", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.79"

[features]
serde_plugin = ["serde"]
